# cpp-template

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
apps/democli/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp
apps/democli/actions/: actions.cpp  actions.hpp
apps/se_factory/: CMakeLists.txt  main.cpp
cmake/: etlx_dependencies.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  host.cmake
examples/: CMakeLists.txt
examples/asio_http_get/: main.cpp
examples/cli_minimal/: main.cpp
examples/event_loop/: main.cpp
examples/http_get/: main.cpp
examples/io_copy/: main.cpp
examples/json_config/: main.cpp
examples/kv_persist/: main.cpp
examples/log_uart/: main.cpp
examples/mtls_client/: main.cpp
examples/result_error/: main.cpp
examples/se_mtls_client/: main.cpp
examples/sha256_stream/: main.cpp
examples/tcp_http_get/: main.cpp
examples/update_fsm/: main.cpp
include/etlx/: etlx_config.hpp
include/etlx/conf/: cli.hpp
include/etlx/core/: error.hpp  optional.hpp  result.hpp  span.hpp  time.hpp
include/etlx/crypto/: crypto.hpp  hmac.hpp  sha256.hpp  stream.hpp
include/etlx/events/: loop.hpp
include/etlx/http/: http.hpp
include/etlx/io/: io.hpp
include/etlx/json/: json.hpp
include/etlx/log/: log.hpp
include/etlx/net/: net.hpp  tcp_socket.hpp  tls.hpp
include/etlx/se/: connection.hpp  key_object.hpp  object_store.hpp  random.hpp  rsa_key.hpp  scp03.hpp  se_pk.hpp
include/etlx/sm/: update_fsm.hpp
include/etlx/storage/: kv.hpp
ports/asio/: CMakeLists.txt  asio_tcp.cpp  asio_tcp.hpp
ports/host/: CMakeLists.txt  host_clock.cpp  host_clock.hpp  host_io.cpp  host_io.hpp  host_kv.cpp  host_kv.hpp  host_random.cpp  host_random.hpp  host_tcp.cpp  host_tcp.hpp
ports/se05x/: CMakeLists.txt  accessManager.h  i2c_sim.c  object_store.cpp  rsa_key.cpp  scp03.cpp  scp03_keyfile.cpp  se05x_probe.cpp  se05x_reset_stub.c  se_connection.cpp  se_pk.cpp  se_random.cpp  smComSocket.c  smComSocket.h
src/: CMakeLists.txt
src/conf/: cli.cpp
src/crypto/: crypto.cpp  hmac.cpp  sha256.cpp
src/events/: loop.cpp
src/http/: http.cpp
src/io/: io.cpp
src/json/: json.cpp
src/log/: log.cpp
src/net/: net.cpp  tls.cpp
src/sm/: update_fsm.cpp
src/storage/: kv.cpp
tests/: CMakeLists.txt
tests/asio/: test_asio.cpp
tests/conf/: test_cli.cpp
tests/core/: test_core.cpp
tests/crypto/: test_crypto.cpp
tests/democli/: test_democli.cpp
tests/events/: test_events.cpp
tests/http/: test_http.cpp
tests/io/: test_io.cpp
tests/json/: test_json.cpp
tests/net/: test_certs.hpp  test_net.cpp  test_tls.cpp
tests/se/: test_se_connection.cpp  test_se_object_store.cpp  test_se_rsa_key.cpp
tests/sm/: test_sm.cpp
tests/storage/: test_kv.cpp
tests/support/: tls_echo_server.hpp
